--- a/app/views/orders/index.erb
+++ b/app/views/orders/index.erb
@@ -40,8 +40,8 @@
                   <td>
                     <a href="/orders/<%= o.id%>"><%= o.id %></a>
                   </td>
-                  <td><%= o.createdAt %></td>
-                  <td><%= o.total %></td>
+                  <td><%= o.created_at %></td>
+                  <td><%= o.total / 100.0 %></td>
                   <td><%= o.status %></td>
                   <td>
                     <%= form_tag refund_path(o.id), method: 'post' do %>
