--- a/app/views/store/products.html.erb
+++ b/app/views/store/products.html.erb
@@ -1,8 +1,5 @@
 <% content_for :product_content do %>
-
 	<!-- content-section-starts -->
-
-
 	<div class="new-product">
 		<div class="new-product-top">
 			<ul class="product-top-list">
@@ -57,15 +54,15 @@
 								<div class="view view-first">
 									<div class="inner_content clearfix">
 										<div class="product_image">
-											<img src="<%= p.mainPhoto.url%>" class="img-responsive" alt=""/>
+											<img src="<%= p.main_photo.url%>" class="img-responsive" alt=""/>
 											<div class="mask">
 												<div class="info">Quick View</div>
 											</div>
 											<div class="product_container">
 												<div class="cart-left">
-													<p class="title"><%= p.title %></p>
+													<p class="title"><%= p.name %></p>
 												</div>
-												<div class="pricey"><span class="item_price" >$ <%= p.price %></span></div>
+												<div class="pricey"><span class="item_price" >$ <%= p.price / 100.0 %></span></div>
 												<div class="clearfix"></div>
 											</div>
 										</div>
@@ -75,7 +72,7 @@
 						</a>
 
 						<div class="cbp-vm-details">
-              <%= p.shortDescription %>
+              <%= p.short_description %>
 						</div>
 						<a class="cbp-vm-icon cbp-vm-add item_add add_to_cart_button" data-product_id="<%=p.id%>" href="#">Add to cart</a>
 					</div>
